[tool.poetry]
name = "repl_nix_almight-bot-discord"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
discord = "^2.0.0"
Flask = "^2.2.2"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
